<resources>
    <string name="app_name">Imgur\'s Most Viral</string>

    <string name="invalid_item_type">Invalid item type</string>
    <string name="by">By</string>
    <string name="replies_singular">%d reply</string>
    <string name="replies_plural">%d replies</string>
    <string name="sort_comments_by">Sort comments by:</string>
    <string name="newest">New</string>
    <string name="best">Best</string>
    <string name="top">Top</string>

    <!-- Not translatable strings -->
    <string name="action" translatable="false">Action</string>
    <string name="selected_post" translatable="false">Selected a post</string>
    <string name="transition_photo" translatable="false">sharedElementTransition</string>

    <!-- App keys -->
    <string name="sync_account_type">imgursmostviral.csabacsete.com</string>
    <string name="content_authority">com.csabacsete.imgursmostviral</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Dummy content -->
    <string name="dummy_title" translatable="false">This is the dummy title of a post</string>
    <string name="dummy_username" translatable="false">DummyUsername200</string>
    <string name="dummy_points" translatable="false">20000 Points</string>
    <string name="dummy_posted_when" translatable="false">11 Hours ago</string>
    <string name="dummy_comment" translatable="false">This is a dummy comment to a post</string>
    <string name="dummy_replies" translatable="false">43 replies</string>
    <string name="dummy_points_short" translatable="false">3200</string>
    <string name="dummy_posted_when_short" translatable="false">23h</string>
    <string name="dummy_description" translatable="false">This is a dummy description for an image item that goes into a card at the bottom</string>
    <string name="dummy_sort" translatable="false">Best</string>
    <string name="clicked_on_ad">Clicked on ad</string>
    <string name="post_details">Post Details</string>
    <string name="posts_grid">Posts Grid</string>
    <string name="clicked_share">Clicked share</string>
    <string name="clicked_on_comment">Clicked on comment</string>
    <string name="clicked_sort">Clicked sort</string>
    <string name="clicked_on_share">Clicked on share</string>
    <string name="points_plural">%d Points</string>
    <string name="points_singular">%d Point</string>
    <string name="share">Share</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="preference_key_top_post">preferenceKey_topPost</string>
    <string name="preference_key_imgur">ImgurSharedPreferences</string>
    <string name="days_ago">days ago</string>
    <string name="day_ago">day ago</string>
    <string name="days_ago_short">d</string>
    <string name="hours_ago">hours ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="minute_ago">minute ago</string>
    <string name="hours_ago_short">h</string>
    <string name="minutes_ago_short">m</string>
    <string name="zero_minutes_ago_short">0 m</string>
    <string name="just_now">Just now</string>
    <string name="post_not_found">The post you are looking for is in another castle.</string>
    <string name="error_load_post">An error occurred while trying to load the post.</string>
    <string name="error_load_comments">An error occurred while trying to load the comments.</string>
    <string name="no_network_connection">No network connection</string>
    <string name="type_text_plain">text/plain</string>
    <string name="post_thumbnail">Post thumbnail</string>
    <string name="icon_no_network_connection">No network connection icon</string>
    <string name="post_image">Post image</string>

</resources>
